adding 3rd content type

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -42,5 +42,9 @@
   "Secret": {
     "dataSource": "db",
     "public": true
+  },
+  "Mine": {
+    "dataSource": "db",
+    "public": true
   }
 }
