--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^3.10.0",
     "jwks-rsa": "^1.2.1",
     "loopback": "^3.0.0",
+    "loopback-auth0-jwt": "^1.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
     "serve-favicon": "^2.0.1",
