--- a/server/model-config.json
+++ b/server/model-config.json
@@ -46,5 +46,9 @@
   "Mine": {
     "dataSource": "db",
     "public": true
+  },
+  "Profile": {
+    "dataSource": "db",
+    "public": true
   }
 }
