--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "loopback": "^3.0.0",
     "loopback-auth0-jwt": "^1.0.0",
     "loopback-boot": "^2.6.5",
+    "loopback-component-auto-migrate": "^0.3.0",
     "loopback-component-explorer": "^5.0.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
