--- a/server/component-config.json
+++ b/server/component-config.json
@@ -2,5 +2,10 @@
   "loopback-component-explorer": {
     "mountPath": "/explorer",
     "generateOperationScopedModels": true
+  },
+  "loopback-component-auto-migrate": {
+    "enabled": true,
+    "raiseError": true,
+    "migration": "auto-update"
   }
 }
