--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-auto-migrate": "^0.3.0",
     "loopback-component-explorer": "^5.0.0",
+    "loopback-connector-mongodb": "^3.4.1",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
   },
